--- a/ver2/templates/index.html
+++ b/ver2/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>EMI Filter Insertion Loss Calculator V.2.2</h1>
+    <h1>EMI Filter Insertion Loss Calculator V.2.2 (2025. 08. 27)</h1>
 
     <div class="container">
         <div class="left-panel">
