--- a/ver2/templates/index.html
+++ b/ver2/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>EMI Filter Insertion Loss Calculator</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
     <h1>EMI Filter Insertion Loss Calculator V.2.2 (2025. 08. 27)</h1>
@@ -49,7 +49,7 @@
 
     async function loadInitialCoreNames() {
         try {
-            const response = await fetch('/get_core_names');
+            const response = await fetch('./get_core_names');
             if (!response.ok) {
                 throw new Error(`HTTP error! status: ${response.status}`);
             }
@@ -186,7 +186,7 @@
         requestBody.topology = validComponents;
 
         try {
-            const response = await fetch('/calculate_loss', {
+            const response = await fetch('./calculate_loss', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
