--- a/ver2/templates/index.html
+++ b/ver2/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
-    <h1>EMI Filter Insertion Loss Calculator V.2.2 (2025. 08. 27)</h1>
-    <a href="/history"><p>History</p></a>
+    <h1 style="display: inline;">EMI Filter Insertion Loss Calculator V.2.2 (2025. 08. 27)</h1>
+    <a href="/history" style="margin-left: 20px;">History</a>
     <div class="container">
         <div class="left-panel">
             <form id="filterForm">
