--- a/ver2/templates/index.html
+++ b/ver2/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1 style="display: inline;">EMI Filter Insertion Loss Calculator V.2.2 (2025. 08. 27)</h1>
-    <a href="/history" style="margin-left: 20px;">History</a>
+    <a href="./history" style="margin-left: 20px;">History</a>
     <div class="container">
         <div class="left-panel">
             <form id="filterForm">
